anna pushing edits from heckman, changes to support plots, and edits from jorge and anna

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -107,7 +107,7 @@ Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program,
 
 \subsubsection{ABC}
 
-\noindent Both the first and second phases of randomization were conducted at the family level, so pairs of siblings and twins were jointly randomized into either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that pairing was based on HRI, maternal IQ, maternal education, maternal age, and gender of the subject, we do not know the original pairs. The study collected an initial sample of 120 families. Twenty-two subjects did not complete the first-phase of treatment as initially assigned by the randomization (see Table~\ref{table:abccompromises}).\footnote{In Appendix~\ref{appendix:controls}, we compare the observed baseline characteristics of the subjects in Table~\ref{table:abccompromises} to the observed baseline characteristics of the subjects who complied to the initial treatment assignment. We find little evidence of differences.}\\
+\noindent Both the first and second phases of randomization were conducted at the family level, so pairs of siblings and twins were jointly randomized into either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that pairing was based on HRI, maternal IQ, maternal education, maternal age, and gender of the subject, we do not know the original pairs. The study collected an initial sample of 120 families. Twenty-two subjects did not complete the first-phase of treatment as initially assigned by the randomization (see Table~\ref{table:abccompromises}).\footnote{In Appendix~\ref{appendix:methodology}, we compare the observed baseline characteristics of the subjects in Table~\ref{table:abccompromises} to the observed baseline characteristics of the subjects who complied to the initial treatment assignment. We find little evidence of differences.}\\
 
 
 \noindent Of these cases, there were four subjects assigned to treatment who left the study before any data on them was collected. In our main methodology, we assume that they are missing at random. Exercises assuming that these subjects had outcomes identical to the subject with the lowest outcome in the treatment group suggest that, even in this extreme scenario, there is little sensitivity (see Appendix~\ref{appendix:assessingcc}).\\
@@ -136,7 +136,7 @@ Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program,
 
 \subsubsection{CARE}
 
-\noindent The randomization protocol in CARE had no major compromises.\footnote{\citet{Wasik_Ramey_etal_1990_CD,Burchinal_Campbell_etal_1997_CD}.} Of the 65 initial families, 23 were randomized to a control group, 25 to the family education treatment group (we do not consider this group in our combined ABC/CARE sample), and 17 to the family education and center-based childcare treatment group. Two families in the family education treatment group had twins who were jointly randomized, as in ABC. We document four cases of program attrition (see Table~\ref{table:care_compromises}).\footnote{In Appendix~\ref{appendix:controls}, we compare the observed baseline characteristics of the subjects in Table~\ref{table:care_compromises} to the observed baseline characteristics of the subjects who complied to the initial treatment assignment. We find little evidence of differences.} For methodological purposes, we consider these subjects analogous to their corresponding cases in ABC. We do not present exercises to evaluate the sensitivity to non-compliance because there was none in CARE. Figure~\ref{fig:care-flow} illustrates CARE's randomization protocol and the presence of subjects throughout the data follow-ups.\\
+\noindent The randomization protocol in CARE had no major compromises.\footnote{\citet{Wasik_Ramey_etal_1990_CD,Burchinal_Campbell_etal_1997_CD}.} Of the 65 initial families, 23 were randomized to a control group, 25 to the family education treatment group (we do not consider this group in our combined ABC/CARE sample), and 17 to the family education and center-based childcare treatment group. Two families in the family education treatment group had twins who were jointly randomized, as in ABC. We document four cases of program attrition (see Table~\ref{table:care_compromises}).\footnote{In Appendix~\ref{appendix:methodology}, we compare the observed baseline characteristics of the subjects in Table~\ref{table:care_compromises} to the observed baseline characteristics of the subjects who complied to the initial treatment assignment. We find little evidence of differences.} For methodological purposes, we consider these subjects analogous to their corresponding cases in ABC. We do not present exercises to evaluate the sensitivity to non-compliance because there was none in CARE. Figure~\ref{fig:care-flow} illustrates CARE's randomization protocol and the presence of subjects throughout the data follow-ups.\\
 
 \input{output/care_compromises}
 
