--- a/Appendices/ProgramCostsAlt.tex
+++ b/Appendices/ProgramCostsAlt.tex
@@ -1,6 +1,6 @@
-\section[Program Costs of ABC/CARE]{Program Costs\footnote{This section of the appendix is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
+\section[Program Costs of ABC/CARE]{Program Costs\footnote{Sylvi Kuperman greatly assisted us in preparing this section of the appendix.}} \label{app:programcosts}
 
-\noindent In this appendix, we document the sources informing our programs' costs calculation in Section~\ref{section:programscosts}. We use a battery of primary sources obtained in the Archives of the University of North Carolina at Chapel Hill---Records of the Office of the Vice Chancellor \citet{UNC-Archives_Health-Affairs}. A copy of these battery of documents is available upon request \textbf{[JJH: To whom? We should give a website.]}. Figure~\ref{figure:who} exemplifies one of these sources, in which the monthly cost of treatment per child for the year 1977 is categorized by source of funding.
+\noindent In this appendix, we document the sources informing our programs' costs calculation in Section~\ref{section:programscosts}. We use a battery of primary sources obtained in the Archives of the University of North Carolina at Chapel Hill---Records of the Office of the Vice Chancellor \citet{UNC-Archives_Health-Affairs}. Figure~\ref{figure:who} exemplifies one of these sources, in which the monthly cost of treatment per child for the year 1977 is categorized by source of funding.
 
 \begin{center}
 \begin{figure}[H] 
