--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -2,7 +2,14 @@
 
 \noindent In this appendix we present the treatment effects of the center-based treatment in ABC/CARE estimates for the 95 main outcomes we consider. For each set of estimates, we first present a summary of the effect of the program(s) using a combining function counting the number of socially positive treatment effects. We then present tables of treatment effect estimates for each outcome. Finally, we present the treatment effect estimates using the step-down procedure to test multiple hypotheses. \\
 
-\noindent We analyze 95 outcomes in the ABC/CARE sample. Table~\ref{table:abccare_rslt_pooled_counts} shows that across all methods of estimation, pooling males and females, over 70\% of the treatment effect estimates are socially positive. When conditioning on 10\% statistical significance, almost 40\% of all estimates are socially positive. These statistics allow us to reject the hypothesis that the treatment and control groups have the same marginal distributions in outcomes. \\
+\noindent Table \ref{tab:main-outcomes} lists the 95 main outcomes that are used in the cost/benefit analysis. Table \ref{tab:suppl-outcomes} lists supplementary outcomes that are not used in the cost/benefit analysis. We check treatment effects on both main outcomes and supplementary outcomes. We reverse the outcomes for which we consider a negative treatment effect socially positive.
+
+\singlespacing
+\input{output/abccare_outcomes_list}
+\input{output/abccare_outcomes_suppl}
+\doublespacing
+
+\noindent Table~\ref{table:abccare_rslt_pooled_counts} shows that across all methods of estimation, pooling males and females, over 70\% of the treatment effect estimates are socially positive. When conditioning on 10\% statistical significance, almost 40\% of all estimates are socially positive. These statistics allow us to reject the hypothesis that the treatment and control groups have the same marginal distributions in outcomes. \\
 
 \noindent For both males and females, we find positive effects in IQ test scores, achievement test scores, as well as educational attainment. Males also enjoy additional benefits in the areas of employment, labor earnings, and hypertension. \\
 
