--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -47,63 +47,51 @@ The University of Chicago}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{B.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{B.\arabic{table}}
-\input{Appendices/BackgroundVariables}
+\input{Appendices/ProgramCostsAlt}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{C.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{C.\arabic{table}}
-\input{Appendices/Results}
+\input{Appendices/Attrition}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{D.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{D.\arabic{table}}
-\input{Appendices/AlternativeMethodologies}
+\input{Appendices/Methodology}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{E.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{E.\arabic{table}}
-\input{Appendices/CommonCritiques}
+\input{Appendices/Education}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{F.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{F.\arabic{table}}
-\input{Appendices/CBAMethodology}
+\input{Appendices/Crime}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{G.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{G.\arabic{table}}
-\input{Appendices/Attrition}
+\input{Appendices/Health}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{H.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{H.\arabic{table}}
-\input{Appendices/Methodology}
+\input{Appendices/CBAMethodology}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
-\input{Appendices/ProgramCostsAlt}
+\input{Appendices/Results}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
-\input{Appendices/Education}
+\input{Appendices/Sensitivity}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{K.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{K.\arabic{table}}
-\input{Appendices/Crime}
+\input{Appendices/AlternativeMethodologies}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{L.\arabic{table}}
-\input{Appendices/Income}
+\input{Appendices/CommonCritiques}
 
-\setcounter{figure}{0}  \renewcommand{\thefigure}{N.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{N.\arabic{table}}
-\input{Appendices/Health}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{O.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{O.\arabic{table}}
+\setcounter{figure}{0}  \renewcommand{\thefigure}{M.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{M.\arabic{table}}
 \input{Appendices/MoreOutcomes}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{P.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{P.\arabic{table}}
-\input{Appendices/Sensitivity}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{Q.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{Q.\arabic{table}}
-\input{Appendices/BackoftheEnvelopeCBA}
 
 \end{appendices}
 
