--- a/output/abccare_outcomes_list.tex
+++ b/output/abccare_outcomes_list.tex
@@ -1,14 +1,16 @@
+
+
 \begin{center}
 \begin{ThreePartTable}
 
 \begin{TableNotes}[para,flushleft]
-Note: This table lists the outcomes that we test treatment effects for. We reverse the outcomes for which we consider a negative treatment effect socially positive.
+Note: This table lists the main outcomes that we test treatment effects for. We reverse the outcomes for which we consider a negative treatment effect socially positive.
 \end{TableNotes}
 
 
 \begin{longtable}{L{4cm} L{5cm} C{1cm} C{1cm} C{1.2cm} C{1.5cm}}
 
-\caption{Outcome Variables} \\
+\caption{Main Outcome Variables} \label{tab:main-outcomes} \\
 
 \toprule
 Category	&	Variable	&	Age	&	ABC	&	CARE	&	Reversed	\\ \midrule
