--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -29,6 +29,6 @@ taxes, medical expenditures, and disability benefits. \\
 %Include table for models, reference here or in methods?
 
 \noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), and the take-up of government social insurance programs such as disability insurance. 
-Transitions of labor earnings are projected outside of the simulation (Section \ref{app:subject_income} describes the methodology).  Because there is no information about assets in the age 30 ABC or CARE data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
+Transitions of labor earnings are projected outside of the simulation (Section \ref{app:method_noobs} describes the methodology).  Because there is no information about assets in the age 30 ABC or CARE data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
 
 \noindent To evaluate the performance of the estimated model, we validate it using various techniques, including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} Using these estimated transitions, we simulate outcomes for cohorts that have the initial characteristics of the ABC/CARE treatment and control groups at age 30. In each year, we use the health, family, and economic transition models to predict obesity, smoking behavior, health status, economic status, family characteristics, disability, and mortality. We then use the models of health care spending to calculate medical costs for Medicare, other public sources excluding Medicare, and medical costs for private sources. We repeat the simulation each year until everyone in the cohort would have died. \\
