--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -67,7 +67,7 @@ with IPW weights.
 To obtain a more complete picture of how the
 program affected parental income, we estimate the treatment effect in the missing ages by linearly
 interpolating the treatment effects between the years for which we observe parental income. We assume
-there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \textbf{[JJH: Jorge, can we not do better? Impute profiles using PSID?]}\\
+there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \textbf{[JJH: Jorge, can we not do better? Impute profiles using PSID?]}\textbf{[JLG: the reason for doing a linear interpolation is that the support in the PSID doesn't let us do much here. The information on the parents is not very complete. PSID of course surveys parents and children, but the matches here are adults and their parents barely appear in PSID. In other words, we are matching the ABC/CARE subjects to individuals who are not young enough as for us to obtain a good income profile of their parents.  We have eight observations between ages 0 and 15 and we are relying on that now.]} \\
 
 
 \subsubsection{Fully Missing Outcomes}
@@ -75,29 +75,68 @@ there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \textbf
 
 \paragraph{Subject Income}
 
-\noindent Labor and public-transfer income of subjects are only observed at ages 21 and 30. In order
-to obtain a complete measure of the impact of the ABC/CARE programs on subject income, we interpolate
-the income streams of subjects for ages 22 to 29, and extrapolate income streams for ages
-31 to 67 using three auxiliary datasets: NLSY79, CNLSY, and PSID. \\
+\noindent Labor and public-transfer income of subjects are only observed at ages 21 and 30.\footnote{At age 21, public-transfer income includes Aid to
+Families with Dependent Children (AFDC) subsidies, food stamps, survivor benefits, disability
+benefits, social security, rent subsidies, and fuel subsidies. At age 30, public-transfer income includes food stamps, welfare, housing assistance, workman's
+compensation, disability, social security, supplemental security income, unemployment benefits,
+worker's compensation insurance, fuel subsidies, educational and aid grants, and other forms of welfare. All values are in 2014 USD.} In order to obtain a complete measure of the impact of the ABC/CARE programs on subject income, we interpolate the income streams of subjects for ages 22 to 29, and extrapolate income streams for ages 31 to 67 using three auxiliary datasets: NLSY, CNLSY, and PSID, which are described below. \\
 
-\noindent We assume common support between the auxiliary
-datasets and the analysis sample. This is required in order for us to reliably use external data to provide inference for the ABC/CARE samples. Figure~\ref{fig:support} validates this
-assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for
-the variables used to interpolate and extrapolate earnings. For details about these datasets, see Appendix \ref{app:subject_income}. \\
+\noindent \textbf{The National Longitudinal Survey of Youth (NLSY)} is a longitudinal survey beginning in 1979 that follows individuals born between 1957 and 1964. The initial interview included 12,686 respondents aged 14 to 22. The survey was designed to include 6,111 individuals representing the non-institutionalized civilian population, a supplemental sample of 5,295 civilian Hispanics, Latinos, blacks, non-blacks/non-Hispanics, and economically disadvantaged youth, and a sample of 1,280 who served in the military as of September 30, 1978. When appropriately weighted, the NLSY is nationally representative of the youth living in the U.S. on January 1, 1979. We include individuals from all three subsamples in our analysis. \\
+
+\noindent The NLSY collected data on labor market participation, education, family background, family life, health issues, assets and income, government program participation, and measures of cognitive skills. We use these data to estimate a prediction model for subject income for ages 31 through 67. \\
+
+\noindent We restrict the NLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. With the mean labor income (2014 USD) in the ABC sample being \$12,232 at age 21 and \$32,782 at age 30, and the maximum reported being \$189,938, the cut-off we impose on the auxiliary data is high enough so that everyone in the ABC/CARE sample is represented, yet low enough to exclude high-earning individuals in the auxiliary sample that do not reflect the ABC/CARE sample well. \\
+
+\noindent We do not impose a restriction on birth year on the NLSY as all respondents are aged between 47 and 55 at the time of the last interview (conducted in 2012). This age range is within the 31--67 range for which we extrapolate the income of the ABC/CARE subjects. \\
+
+\noindent Given the biennial nature of the NLSY, we only observe each subject at either odd or even ages. Not only does this reduce the size of the sample on which we fit our prediction model at each age, but it can introduce biases associated with the odd-aged and even-aged cohorts. To address this issue, we perform a linear interpolation on the variables in the NLSY data that enter into our prediction model. This allows us to estimate our prediction model on all subjects of the NLSY satisfying our restrictions at every age. \\
+
+\noindent \textbf{The Children of the National Longitudinal Survey of Youth (CNLSY)} is a survey of the children of the mothers from the NLSY, beginning in 1986. At the time of the initial interview, the ages of the children surveyed ranged from 0 to 23. As of 2010, the CNLSY sample includes 11,504 children born to NLSY mothers. With appropriate weights, the CNLSY may be considered nationally representative of children born to women who were aged 14 to 22 during 1979. Interviews were conducted annually between 1986 and 1994, and biennially thereafter. \\
+
+\noindent Similar to the NLSY, the CNLSY collected data on cognitive ability, motor and social development, home environment, health information, education, attitudes, employment, income, family decisions, and more. We use these data to estimate a prediction model for subject income for ages 22 through 29. \\
+
+\noindent As we did with the NLSY, we restrict the CNLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. In addition to this, we limit the sample to subjects born between 1978 and 1983. Because the CNLSY data extend to 2012, this implies that we use the most recent data from the CNLSY in which individuals are aged 29 to 34. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the CNLSY data as possible at every age when interpolating subject income. \\
+
+\noindent \textbf{The Panel Survey of Income Dynamics (PSID)} is a longitudinal household survey containing between 5,000 and 8,500 families in each wave. It began as yearly survey in 1968 and has been fielded biennially since 1996. When appropriately weighted, the PSID is designed to be representative of U.S. households. The PSID provides extensive information concerning demographics, economic outcomes, health outcomes, marriage and fertility, and more. In addition to using the PSID to forecast future earnings of ABC/CARE subjects, we use the PSID to forecast health outcomes. See Appendix \ref{section:data_psid} for details on how the PSID relates to health outcomes. \\
+
+\noindent Similar to the CNLSY, we restrict the PSID to individuals born between 1945 and 1981. Because the data extend to 2013, this means we use the most recent subsample of individuals aged 30 to 67. We also exclude all individuals with labor income exceeding \$300,000 (2014 USD) at any given year. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the PSID data as possible at every age to interpolate subject income. \\
+
+\noindent We assume common support between the auxiliary datasets and the analysis sample. This is required in order for us to reliably use external data to provide inference for the ABC/CARE samples. Figure~\ref{fig:support} validates this assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for the variables used to interpolate and extrapolate earnings.  \\
 
 \noindent \textbf{[JJH: Jorge, these are hard to read and we are missing many of the variables we use to project.]} \\
-\textbf{[JJH: ? (mother's years of education)]}
+\textbf{[JLG: We are assuming common support in two vector of variables: W (pre-program variables) and X (programs possibly affected by treatment). In our empirical application we let:} \\
+
+\noindent $\mathbf{W =}$ \textbf{male indicator, black indicator, mother's education} \\
+\noindent $\mathbf{X =} $ \textbf{PIAT scores at ages 5-7, years of education at age 30 income at ages 21 and 30, BMI at age 34}
+
+
+\begin{enumerate}
+\item \textbf{For all of the variables in W,X except for the male and black indicators, you can find a plot showing the overlap in the support between the experimental and the auxiliary samples.} 
+
+\item \textbf{There is a real full overlap in the sense that the support in the auxiliary samples completely contains the support in the experimental sample.} 
+
+\item \textbf{I can print this in color for you tomorrow, but if you have a screen handy, there is no doubt of the overlap.} 
+
+\item \textbf{The reasons why additional samples were brought up was (a) timing of the variables; (b) common support itself. Here is an example. For labor income at age 21, the cNLSY provided us the widest support given the age of its individuals. It was not necessary to bring in more samples. For labor income at age 30, we did need to bring in more samples because the support in cNLSY was not covering the support in the experimental data. This is why you see different auxiliary samples change across plots.}
+
+\item \textbf{For the male indicator we do not have a common support issue. For the black indicator we don't either, but you might want to ask why we do not keep only blacks to perform the interpolations and extrapolations. The answer is: we did try an exercise in which we only kept the black sample. The common support conditions struggle a little more to be satisfied but we went all the way to compute the CBA using the black sample only. The standard errors grow but not to a great extent. I wouldn't worry about someone asking us to perform that exercise but I think it's better to keep the full sample. At the end of the day, a lot of the other variables we are using predict well the disadvantage of the sample.} 
+
+\item  \textbf{How do we choose the variables in W,X and why we didn't choose others? This is basically a restriction imposed by the availability of the the data in the experimental and non-experimental sources. We did a careful cross-walk and maximized the amount of variables we were able to use.} 
+\end{enumerate}
+\textbf{These points are the reasons why you see these plots and no more in this appendix.]} \\
+
+\noindent \textbf{[JLG: plots were remade and these pages were printed in color for you.]}
 
 
 \begin{figure}[H]
 	\caption{Support of ABC/CARE and Auxiliary Data} \label{fig:support}
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Income at Age 21} \label{fig:support_inc21}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_inc21.eps}
 	\end{subfigure}
 	
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Income at Age 30} \label{fig:support_inc30}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_inc30.eps}
@@ -109,13 +148,13 @@ the variables used to interpolate and extrapolate earnings. For details about th
 
 \begin{figure}[H]
 	\ContinuedFloat
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Subject's Years of Education} \label{fig:support_educ}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_educ.eps}
 	\end{subfigure}
 	
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Mother's Years of Education} \label{fig:support_meduc}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_momed.eps}
@@ -125,25 +164,25 @@ the variables used to interpolate and extrapolate earnings. For details about th
 	
 \begin{figure}[H]
 	\ContinuedFloat
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Average PIAT Math Scores, Ages 5--7} \label{fig:support_math}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_math.eps}
 	\end{subfigure}
 	
-	\begin{subfigure}[h]{0.8\textwidth}
+	\begin{subfigure}[h]{0.9\textwidth}
 	\centering
 	\caption{Body Mass Index, Age 34} \label{fig:support_bmi}
 	\includegraphics[width=\textwidth]{AppOutput/Methodology/support_bmi.eps}
 	\end{subfigure}
 	
 	\floatfoot{
+	\footnotesize
 	\noindent Note: These graphs display the support of ABC, PSID, NLSY, and CNLSY
 	for variables we use to project future earnings. PIAT math
 	scores are averaged over ages 5--7.
 	}
 \end{figure}
-
 
 \noindent Both labor and public-transfer income are interpolated using the exact same methodology, so we restrict
 our attention to interpolating labor income. We employ the CNLSY dataset to model labor
@@ -156,36 +195,17 @@ resamples of the CNLSY to obtain a measure of prediction error, and denote the v
 \emph{for the outcome variables} by $\beta_{a,s}$, where $a \in \{22, 23, \dots, 29\}$ denotes age, and
 $s \in \{1,2,\dots, 1,000\}$ indexes the bootstrap samples. \\
 
-% We impose two restrictions on the CNLSY dataset: one on birth year, and one on income.
-% In regard to birth year, we limit the sample to subjects born in between 1978 and 1983. As our
-% CNLSY data extends up to 2012, this implies that we use the most recent data from the CNLSY
-% where individuals are of age 29 to 34.
-
-% Given the biennial nature of the CNLSY, we observe each subject at either the odd ages or even
-% ages. Not only will this reduce the size of our sample on which we fit our prediction model
-% at each age, but possibly introduce biases associated with the odd-aged and even-aged cohorts.
-% To address this issue, we perform a linear interpolation on the variables in the CNLSY data
-% that enter into our prediction model. This allows us to estimate our prediction model on
-% all subjects of the CNLSY satisfying our restrictions at every age.
-
-% We further restrict the CNLSY sample to individuals with labor income fewer than
-% \$300,000 (USD 2014) at any given year. With the mean labor income in the ABC
-% sample being \$12,232.43 at age 21 and \$32,781.96 at age 30 (USD 2014), and the maximum reported
-% being \$189,937.50, the cut-off we impose on the auxiliary data is high enough
-% so that everyone in the ABC sample is represented, yet low enough to
-% exclude high-earning individuals in the auxiliary sample that do not reflect the ABC sample well.
-
 \noindent The outcome variables we use as independent variables to fit the model to the CNLSY data are also
 observed in the ABC/CARE data, and we are able to calculate the treatment effects on each of these outcomes
 using the procedures described in Appendix \ref{app:method_fullobs} and Appendix \ref{app:method_partialobs}. We
-obtain these estimates for 1,-000 bootstrap resamples of both the ABC/CARE data, and denote the vectors of
+obtain these estimates for 1,000 bootstrap resamples of the ABC/CARE data, and denote the vectors of
 coefficients by $\gamma_r$, where $r \in \{1,2,\dots,1,000\}$ indexes the bootstrap samples. \\
 
 \noindent To interpolate the treatment effect on subject labor income at age $a$, we take the dot product
-of $\beta_{a, s}$ and $\gamma_r$ for all $s,r$ pairs, resulting in 5,625 scalars. We reintroduce
+of $\beta_{a, s}$ and $\gamma_r$ for all $s,r$ pairs, resulting in 1,000,000 scalars. We reintroduce
 prediction error by first randomly drawing residuals from our fitted model on the auxiliary data and assigning
 them to the ABC/CARE subjects. We then take the mean difference of these residuals across treatment and control
-groups, and add it to the previously described scalar. We do this for all 5,625scalars. These scalars form the empirical
+groups, and add it to the previously described scalar. We do this for all 1,000,000 scalars. These scalars form the empirical
 bootstrap distribution of the treatment effect. Note that
 we bypass the estimation of the subjects' actual incomes, for which we are unable to obtain an
 unbiased estimate. Instead, we directly obtain an unbiased estimate of the treatment effect. This
@@ -194,7 +214,7 @@ the observed early-adult outcomes. In this case, the observed early-adult outcom
 30, years of education at age 30, average PIAT math scores from ages 5 to 10, and BMI at age 34. Since $\gamma_r$ has
 been adjusted to address selection into treatment and attrition in the ABC/CARE data, the bootstrap distribution
 is devoid of selection and attrition issues. In addition, the bootstrap distribution captures
-the error stemming from the ABC/CARE datasets, and prediction error of the model fitted to the CNLSY dataset.
+the error stemming from the ABC/CARE dataset, and prediction error of the model fitted to the CNLSY dataset.
 We take the mean of the empirical bootstrap distribution as our point estimate, and the standard deviation
 of the distribution as the standard error. Again, we carry out this procedure for the
 pooled, male, and female samples. \\
@@ -328,6 +348,19 @@ generate the IPW weights, and are listed in the table above.
 \end{adjustbox}
 \end{sidewaystable}
 
+
+\subsection{Controlling for Background Variables}
+
+\noindent We select the background variables that we control for as follows. First, we select the three variables, from 17 potential variables, that best predict enrollment into alternative preschool for subjects who were randomly assigned not to receive center-based childcare---the control group in ABC and the control and family education treatment groups in CARE. To choose the most predictive control set, we estimate the $17 \choose 3$ linear models, using the variables in Panels (1) and (2) of Table~\ref{tab:pselectvars}. The most predictive model is the one generating the lowest Bayesian Information Criterion (BIC).\\
+
+\noindent We proceed in a similar way to choose the second set of background variables. Instead of predicting enrollment into alternative preschool, we predict the relevant outcome of interest. For this exercise we use the variables in Panel (2), so we estimate $14 \choose 3$ models.\\
+
+\noindent Our set of control variables consists of these two sets of background variables.
+
+\singlespacing
+\input{output/controlsets}
+\doublespacing
+
 \subsection{Internal Rate of Return}
 \label{app:method_irr}
 
@@ -377,7 +410,8 @@ We take the mean of the distributions to be the point estimates, and we take the
 to be the standard errors. To construct the 80\% confidence intervals, we take the 10\textsuperscript{th}
 and 90\textsuperscript{th} quantiles of each bootstrap distribution. \\
 
-\noindent{\textbf{[JJH: What is the basis for the 0.5 in public-transfer income? Why the 1.5?]}}
+\noindent \textbf{[JJH: What is the basis for the 0.5 in public-transfer income? Why the 1.5?]} \\
+\noindent \textbf{[JLG: basis is \citet{Browning_1987_AER,Heckman_Smith_1998_evaluating,Heckman_LaLonde_etal_1999_active,Feldstein_1999_REStat}, which is the basis for the Perry CBA as well.]}
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -389,7 +423,7 @@ and 90\textsuperscript{th} quantiles of each bootstrap distribution. \\
 \tiny
 \item Note: The table lists the components of the costs and benefits of ABC/CARE.
 In order for some components to be categorized as benefits, we reversed the sign
-of the treatment effect. *Only education costs up until age 18 are multiplied by 1.5 to account for welfare costs.
+of the treatment effect. *Only education costs up until age 18 are multiplied by 1.5 to account for welfare costs. This factor is drawn from \citet{Heckman_Moon_etal_2010_RateofReturn}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -461,7 +495,7 @@ of the benefits to be the total benefits of the ABC/CARE programs (see Appendix~
 
 \noindent To account for deadweight loss, we assume a marginal welfare cost of 50\% by multiplying
 public costs components by a factor of $1.5$. For the same reason, we multiply public-transfer
-income by a factor of 0.5 \textbf{[JJH: Why? What principle?]}. We discount each component of the benefits and costs
+income by a factor of 0.5 \textbf{[JJH: Why? What principle?]}\textbf{[JLG: See previous comment. We base this on Perry CBA.]}. We discount each component of the benefits and costs
 by 3\% every year to obtain their net present value at birth. We then sum up the discounted
 components of the benefits and find the ratio with the discounted costs. \\
 
